fix: proper handling of the wide scrollbars in the WYSIWYG editor

--- a/app/src/scss/editor/scrollbar.scss
+++ b/app/src/scss/editor/scrollbar.scss
@@ -40,3 +40,13 @@
 ::-webkit-scrollbar-corner {
     background: transparent;
 }
+
+.use-wide-scrollbars {
+    ::-webkit-scrollbar {
+        width: 12px;
+    }
+
+    ::-webkit-scrollbar:horizontal {
+        height: 12px;
+    }
+}
